Enable maven support for plugin test and travis ci